--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Roboto:ital,wdth@0,95.8;1,95.8&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
     </head>
 <body>
@@ -39,8 +42,7 @@
 
 <main>
 
-<h2>Novedades</h2>
-    <p>Descubre nuestros últimos productos y ofertas especiales. ¡No te lo pierdas!</p>
+<h2>• • Novedades • •</h2>
 
 <div class="novedades">
 
