--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
     <link rel="shortcut icon" href="images/ico.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Roboto:ital,wdth@0,95.8;1,95.8&display=swap" rel="stylesheet">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
     </head>
 <body>
 
 <header>
-    <a href="index.html"><img src="images/qw4rfqwer.png" ></a>
+    <a href="index.html"><img src="images/qw4rfqwer - copia.png" ></a>
 
 <nav>
     <ul>
@@ -37,9 +33,6 @@
     <img src="images/5tfgwergwertg.png">
 </div>
 
-
-
-
 <main>
 
 <h2>• • Novedades • •</h2>
@@ -47,60 +40,67 @@
 <div class="novedades">
 
     <div class="novedad" >
-                <div class="color"></div>
-        <img src="/images/ooreo.png" alt="Novedad 1">
-                <div class="texto-novedad">
-        <h3>Tarta de oreo</h3>
-        <p>Descripción breve del producto 1.</p>
-        </div>
+        <div class="color"></div>
+        <img src="/images/ooreo.png" >
+        <p>Tarta de oreo</p>
     </div>
 
     <div class="novedad">
         
         <div class="color1"></div>
-        <img src="/images/pista.png" alt="Novedad 1">
+        <img src="/images/pista.png" >
 
-        <div class="texto-novedad">
+        <p>Palmera de pistacho</p>
 
-        <h3>Palmera de pistacho</h3>
-        <p>Descripción breve del producto 1.</p>
-        </div>
     </div>
 
     <div class="novedad">
         <div class="color"></div>
-        <img src="/images/pasteles.png" alt="Novedad 1">
-                <div class="texto-novedad">
-        <h3>Tartitas variadas</h3>
-        <p>Descripción breve del producto 1.</p>
-        </div>
+        <img src="/images/pasteles.png" >
+
+        <p>Tartitas variadas</p>
+
     </div>
 
         <div class="novedad">
             <div class="color1"></div>
-        <img src="images/vienesa.png" alt="Novedad 1">
-        <div class="texto-novedad">
-        <h3>Tarta vienesa</h3>
-        <p>Descripción breve del producto 1.</p>
-        </div>
+        <img src="images/vienesa.png">
+
+        <p>Tarta vienesa</p>
+
     </div>
 
 </div>
 
 
+<div class="descripcion">
+
+    <div class="texto">
+        <h2>Productos Andupan</h2>
+        <p>En <b>Productos Andupan</b>, nos dedicamos a endulzar tus momentos especiales con una amplia variedad de productos de panadería y pastelería. Desde panes artesanales hasta deliciosos pasteles, cada uno de nuestros productos está elaborado con ingredientes de la más alta calidad y con un toque de amor y dedicación.</p>
+        <p>Nuestra misión es ofrecerte no solo productos deliciosos, sino también una experiencia única que te haga sentir como en casa. Ya sea que estés buscando un pan fresco para el desayuno, un pastel para una ocasión especial o simplemente un dulce capricho, en Productos Andupan tenemos algo para todos los gustos.</p>
+        <p>Visítanos y descubre por qué somos la elección favorita de nuestros clientes. ¡Endulzamos tus mejores momentos!</p>
+    </div>
+
+    <div class="foto1">
+    <img src="images/rwsertgwerth.png" class="foto">
+    </div>
+
+</div>
+
 </main>
 
-
+<div class="banner2"><img src="images/DSC_0582.jpg"></div>
 
     <footer >
 
         <div class="esto">
             <div class="info">
-                <img src="fotos_web/logo_blanco.png" class="img-footer">
+                <img src="images/EASRGSERG.png">
                 <p>¡Endulzamos tus mejores momentos!</p>
                 <p><i class="fas fa-map-marker-alt"></i> Calle 123, Ciudad, País</p>
                 <p><i class="fas fa-phone"></i> +123 456 789</p>
-                <p><i class="fas fa-envelope" ></i> <a href="mailto:contacto@panaderiamanoli.com">contacto@panaderiamanoli.com</a></p>
+                <p><i class="mail" ></i> <a href="mailto:contacto@panaderia.com">contacto@panaderia.com</a></p>
             </div>
 
             <div class="info">
