--- a/index.html
+++ b/index.html
@@ -1,120 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos Andupan</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="styles/headerfooter.css">
     <link rel="shortcut icon" href="images/ico.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Outfit:wght@100..900&display=swap"
+        rel="stylesheet">
 
-    </head>
+</head>
+
 <body>
 
-<header>
-    <a href="index.html"><img src="images/qw4rfqwer - copia.png" ></a>
+<section class="hcontacto">
+    <div class="htelefono" href="tel:+34953510226">
+        <img src="images/tlf.png">
+        <p><strong>Teléfono:</strong>666 666 666</p>
+    </div>
 
-<nav>
-    <ul>
-    <li><a href="#">Sobre nosotros</a>
-    </li>
-    <li><a href="#">Productos</a></li>
-    <li><a href="#">Puntos de venta</a></li>
-    <li><a href="#">Contacto</a></li>
-    <li><a><img src="images/iconoinstaB.png" class="redes"></a></li>
-    <li><a><img src="images/iconofaceB.png" class="redes"></a></li>
-    </ul>
-</nav>
+    <div class="hredes">
+        <a href="#" title="Facebook"><img src="images/iconoafce.png"></a>
+        <a href="#" title="Instagram"><img src="images/iconoinsta.png"></a>
+        <a href="#" title="WhatApp"><img src="images/iconowhatsapp.png"></a>
+        <a href="#" title="Correo electrónico"><img src="images/iconocorreo.png"></a>
+    </div>
+</section>
+
+<header class="hheader">
+    <a href="index.html"><img src="images/iconoprincipal.png"></a>
+
+    <nav>
+        <ul>
+            <li><a href="#">Sobre nosotros</a> </li>
+            <li><a href="#">Productos</a></li>
+            <li><a href="#">Puntos de venta</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </nav>
 </header>
 
-<div class="banner">
-    <img src="images/5tfgwergwertg.png">
-</div>
+    <section class="banner">
+        <div class="banner-content">
+            <h1>Delicias Artesanales</h1>
+            <p>Pasteles hechos a mano con ingredientes frescos y mucho cariño.
+                Descubre nuestros sabores únicos.</p>
 
-<main>
+            <a href="#" class="banner-btn">Ver Productos</a>
+        </div>
+    </section>
 
-<h2>• • Novedades • •</h2>
+    <main>
 
-<div class="novedades">
+        <h2>• • Novedades • •</h2>
 
-    <div class="novedad" >
-        <div class="color"></div>
-        <img src="/images/ooreo.png" >
-        <p>Tarta de oreo</p>
-    </div>
+        <div class="novedades">
 
-    <div class="novedad">
+            <div class="novedad">
+                <div class="color"></div>
+                <img src="/images/ooreo.png">
+                <p>Tarta de oreo</p>
+            </div>
+
+            <div class="novedad">
+
+                <div class="color1"></div>
+                <img src="/images/pista.png">
+
+                <p>Palmera de pistacho</p>
+
+            </div>
+
+            <div class="novedad">
+                <div class="color"></div>
+                <img src="/images/pasteles.png">
+
+                <p>Tartitas variadas</p>
+
+            </div>
+
+            <div class="novedad">
+                <div class="color1"></div>
+                <img src="images/vienesa.png">
+
+                <p>Tarta vienesa</p>
+
+            </div>
+
+        </div>
+
+
+        <div class="descripcion">
+
+            <div class="texto">
+                <h2>Productos Andupan</h2>
+                <p>En <b>Productos Andupan</b>, nos dedicamos a endulzar tus momentos especiales con una amplia variedad
+                    de productos de panadería y pastelería. Desde panes artesanales hasta deliciosos pasteles, cada uno
+                    de nuestros productos está elaborado con ingredientes de la más alta calidad y con un toque de amor
+                    y dedicación.</p>
+                <p>Nuestra misión es ofrecerte no solo productos deliciosos, sino también una experiencia única que te
+                    haga sentir como en casa. Ya sea que estés buscando un pan fresco para el desayuno, un pastel para
+                    una ocasión especial o simplemente un dulce capricho, en Productos Andupan tenemos algo para todos
+                    los gustos.</p>
+                <p>Visítanos y descubre por qué somos la elección favorita de nuestros clientes. ¡Endulzamos tus mejores
+                    momentos!</p>
+            </div>
+
+            <div class="foto1">
+                <img src="images/rwsertgwerth.png" class="foto">
+            </div>
+
+        </div>
+
+    </main>
+
+    <div class="banner2"><img src="images/DSC_0582.jpg"></div>
+
+<footer class="footer">
+
+
+    <div class="footer-content">
         
-        <div class="color1"></div>
-        <img src="/images/pista.png" >
-
-        <p>Palmera de pistacho</p>
-
-    </div>
-
-    <div class="novedad">
-        <div class="color"></div>
-        <img src="/images/pasteles.png" >
-
-        <p>Tartitas variadas</p>
-
-    </div>
-
-        <div class="novedad">
-            <div class="color1"></div>
-        <img src="images/vienesa.png">
-
-        <p>Tarta vienesa</p>
-
-    </div>
-
-</div>
-
-
-<div class="descripcion">
-
-    <div class="texto">
-        <h2>Productos Andupan</h2>
-        <p>En <b>Productos Andupan</b>, nos dedicamos a endulzar tus momentos especiales con una amplia variedad de productos de panadería y pastelería. Desde panes artesanales hasta deliciosos pasteles, cada uno de nuestros productos está elaborado con ingredientes de la más alta calidad y con un toque de amor y dedicación.</p>
-        <p>Nuestra misión es ofrecerte no solo productos deliciosos, sino también una experiencia única que te haga sentir como en casa. Ya sea que estés buscando un pan fresco para el desayuno, un pastel para una ocasión especial o simplemente un dulce capricho, en Productos Andupan tenemos algo para todos los gustos.</p>
-        <p>Visítanos y descubre por qué somos la elección favorita de nuestros clientes. ¡Endulzamos tus mejores momentos!</p>
-    </div>
-
-    <div class="foto1">
-    <img src="images/rwsertgwerth.png" class="foto">
-    </div>
-
-</div>
-
-</main>
-
-<div class="banner2"><img src="images/DSC_0582.jpg"></div>
-
-    <footer >
-
-        <div class="esto">
-            <div class="info">
-                <img src="images/EASRGSERG.png">
-                <p>¡Endulzamos tus mejores momentos!</p>
-                <p><i class="fas fa-map-marker-alt"></i> Calle 123, Ciudad, País</p>
-                <p><i class="fas fa-phone"></i> +123 456 789</p>
-                <p><i class="mail" ></i> <a href="mailto:contacto@panaderia.com">contacto@panaderia.com</a></p>
-            </div>
-
-            <div class="info">
-                <h3>Horario de Atención</h3>
-                <p>Lunes a Viernes: 9:00 AM - 7:00 PM</p>
-                <p>Sábado y Domingo: 10:00 AM - 5:00 PM</p>
-            </div>
-
+        <div class="footer-col">
+            <img src="images/EASRGSERG.png" class="footer-logo">
+            <p class="slogan">¡Endulzamos tus mejores momentos!</p>
+            <p><i class="fas fa-map-marker-alt"></i> Calle 123, Ciudad, País</p>
+            <p><i class="fas fa-phone"></i> +123 456 789</p>
+            <p><i class="fas fa-envelope"></i> 
+                <a href="mailto:contacto@panaderia.com">contacto@panaderia.com</a>
+            </p>
         </div>
 
-        <div class="footer-bottom">
-            <p>&copy; 2025 Productos Andupan | Todos los derechos reservados.</p>
+        <div class="footer-col">
+            <h3>Horario de Atención</h3>
+            <p>Lunes a Viernes: 9:00 AM - 7:00 PM</p>
+            <p>Sábado y Domingo: 10:00 AM - 5:00 PM</p>
         </div>
-    </footer>
-    
+
+        <div class="footer-col">
+            <h3>Enlaces</h3>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Promociones</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </div>
+
+    </div>
+
+    <div class="footer-bottom">
+        <p>&copy; 2025 Productos Andupan | Todos los derechos reservados.</p>
+    </div>
+
+</footer>
+
 </body>
+
 </html>
