--- a/nuestros-productos.html
+++ b/nuestros-productos.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos Andupan</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="styles/nuestros-productos.css">
     <link rel="stylesheet" href="styles/headerfooter.css">
     <link rel="shortcut icon" href="images/ico.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,8 +13,8 @@
         rel="stylesheet">
 
 </head>
-
 <body>
+    
 
 <section class="hcontacto">
     <div class="htelefono" href="tel:+34953510226">
@@ -37,88 +36,18 @@
     <nav>
         <ul>
             <li><a href="#">Sobre nosotros</a> </li>
-            <li><a href="nuestros-productos.html">Productos</a></li>
-            <li><a href="puntos-venta.html">Puntos de venta</a></li>
+            <li><a href="#">Productos</a></li>
+            <li><a href="#">Puntos de venta</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
 </header>
 
-    <section class="banner">
-        <div class="banner-content">
-            <h1>Delicias Artesanales</h1>
-            <p>Pasteles hechos a mano con ingredientes frescos y mucho cariño.
-                Descubre nuestros sabores únicos.</p>
 
-            <a href="#" class="banner-btn">Ver Productos</a>
-        </div>
-    </section>
-
-    <main>
-
-        <h2>• • Novedades • •</h2>
-
-        <div class="novedades">
-
-            <div class="novedad">
-                <div class="color"></div>
-                <img src="/images/ooreo.png">
-                <p>Tarta de oreo</p>
-            </div>
-
-            <div class="novedad">
-
-                <div class="color1"></div>
-                <img src="/images/pista.png">
-
-                <p>Palmera de pistacho</p>
-
-            </div>
-
-            <div class="novedad">
-                <div class="color"></div>
-                <img src="/images/pasteles.png">
-
-                <p>Tartitas variadas</p>
-
-            </div>
-
-            <div class="novedad">
-                <div class="color1"></div>
-                <img src="images/vienesa.png">
-
-                <p>Tarta vienesa</p>
-
-            </div>
-
-        </div>
+<main>
 
 
-        <div class="descripcion">
-
-            <div class="texto">
-                <h2>Productos Andupan</h2>
-                <p>En <b>Productos Andupan</b>, nos dedicamos a endulzar tus momentos especiales con una amplia variedad
-                    de productos de panadería y pastelería. Desde panes artesanales hasta deliciosos pasteles, cada uno
-                    de nuestros productos está elaborado con ingredientes de la más alta calidad y con un toque de amor
-                    y dedicación.</p>
-                <p>Nuestra misión es ofrecerte no solo productos deliciosos, sino también una experiencia única que te
-                    haga sentir como en casa. Ya sea que estés buscando un pan fresco para el desayuno, un pastel para
-                    una ocasión especial o simplemente un dulce capricho, en Productos Andupan tenemos algo para todos
-                    los gustos.</p>
-                <p>Visítanos y descubre por qué somos la elección favorita de nuestros clientes. ¡Endulzamos tus mejores
-                    momentos!</p>
-            </div>
-
-            <div class="foto1">
-                <img src="images/rwsertgwerth.png" class="foto">
-            </div>
-
-        </div>
-
-    </main>
-
-    <div class="banner2"><img src="images/DSC_0582.jpg"></div>
+</main>
 
 <footer class="footer">
 
@@ -160,5 +89,4 @@
 </footer>
 
 </body>
-
 </html>
