puntos de venta

--- a/puntos-venta.html
+++ b/puntos-venta.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos Andupan. Puntos de venta</title>
-    <link rel="stylesheet" href="styles/headerfooter.css"
+    <link rel="stylesheet" href="styles/headerfooter.css">
+    <link rel="stylesheet" href="styles/nuestros_productos.css">
+    <link rel="shortcut icon" href="images/ico.png" />
+
 </head>
 <body>
 
@@ -35,14 +38,122 @@
     </nav>
 </header>
 
+<main>
 
+        <section class="banner">
+        <div class="banner-content">
+            <h1>Puntos de venta</h1>
+            <p>Encuentra tu tienda más cercana</p>
+        </div>
+    </section>
 
+<div class="puntos-venta">
+
+    <div class="tarjeta">
+        <div class="color"><img src="images/tienda.png"></div>
+
+        <div class="info">
+            <strong class="nombre">Colmado La Rubia</strong><br>
+            <strong>Dirección:</strong>
+            <p class="direccion">C. la Palma, 19, 23740</p>
+            <p class="poblacion">Andújar, Jaén</p>
+            <strong>Contacto:</strong>
+            <p class="tlf"><img src="images/tlf.png">636 547 129</p>
+            <p class="tlf"><img src="images/tlf.png">950 457 412</p>
+        </div>
+    </div>
+
+    <div class="tarjeta">
+        <div class="color"><img src="images/tienda.png"></div>
+
+        <div class="info">
+            <strong class="nombre">Plaza de Abastos</strong><br>
+            <strong>Dirección:</strong>
+            <p class="direccion">C. el Pino, 36, 23740</p>
+            <p class="poblacion">Andújar, Jaén</p>
+            <strong>Contacto:</strong>
+            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+        </div>
+    </div>
+
+        <div class="tarjeta">
+        <div class="color"><img src="images/tienda.png"></div>
+
+        <div class="info">
+            <strong class="nombre">Plaza de Abastos</strong><br>
+            <strong>Dirección:</strong>
+            <p class="direccion">C. el Pino, 36, 23740</p>
+            <p class="poblacion">Andújar, Jaén</p>
+            <strong>Contacto:</strong>
+            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+        </div>
+    </div>
+
+        <div class="tarjeta">
+        <div class="color"><img src="images/tienda.png"></div>
+
+        <div class="info">
+            <strong class="nombre">Plaza de Abastos</strong><br>
+            <strong>Dirección:</strong>
+            <p class="direccion">C. el Pino, 36, 23740</p>
+            <p class="poblacion">Andújar, Jaén</p>
+            <strong>Contacto:</strong>
+            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+        </div>
+    </div>
+
+        <div class="tarjeta">
+        <div class="color"><img src="images/tienda.png"></div>
+
+        <div class="info">
+            <strong class="nombre">Plaza de Abastos</strong><br>
+            <strong>Dirección:</strong>
+            <p class="direccion">C. el Pino, 36, 23740</p>
+            <p class="poblacion">Andújar, Jaén</p>
+            <strong>Contacto:</strong>
+            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+        </div>
+    </div>
+
+        <div class="tarjeta">
+        <div class="color"><img src="images/tienda.png"></div>
+
+        <div class="info">
+            <strong class="nombre">Plaza de Abastos</strong><br>
+            <strong>Dirección:</strong>
+            <p class="direccion">C. el Pino, 36, 23740</p>
+            <p class="poblacion">Andújar, Jaén</p>
+            <strong>Contacto:</strong>
+            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+        </div>
+    </div>
+
+        <div class="tarjeta">
+        <div class="color"><img src="images/tienda.png"></div>
+
+        <div class="info">
+            <strong class="nombre">Plaza de Abastos</strong><br>
+            <strong>Dirección:</strong>
+            <p class="direccion">C. el Pino, 36, 23740</p>
+            <p class="poblacion">Andújar, Jaén</p>
+            <strong>Contacto:</strong>
+            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+        </div>
+    </div>
+
+</div>
 
     
-<iframe src="https://www.google.com/maps/d/u/1/embed?mid=1I7JSFV5x4bud9gDTZ7JlfUYQA5_QYD4&ehbc=2E312F" width="640" height="480"></iframe>
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1I7JSFV5x4bud9gDTZ7JlfUYQA5_QYD4&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
 
 
-
+</main>
 
 <footer class="footer">
 
