--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <section class="hcontacto">
     <div class="htelefono" href="tel:+34953510226">
         <img src="images/tlf.png">
-        <p><strong>Teléfono:</strong>666 666 666</p>
+        <p><strong>Teléfono:</strong>+34 953 51 02 26</p>
     </div>
 
     <div class="hredes">
