--- a/puntos-venta.html
+++ b/puntos-venta.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos Andupan. Puntos de venta</title>
     <link rel="stylesheet" href="styles/headerfooter.css">
-    <link rel="stylesheet" href="styles/nuestros_productos.css">
+    <link rel="stylesheet" href="styles/puntos_venta.css">
     <link rel="shortcut icon" href="images/ico.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Outfit:wght@100..900&display=swap"
+        rel="stylesheet">
 
 </head>
 <body>
@@ -14,7 +18,7 @@
 <section class="hcontacto">
     <div class="htelefono" href="tel:+34953510226">
         <img src="images/tlf.png">
-        <p><strong>Teléfono:</strong>666 666 666</p>
+        <p><strong>Teléfono:</strong>+34 953 51 02 26</p>
     </div>
 
     <div class="hredes">
@@ -32,7 +36,7 @@
         <ul>
             <li><a href="#">Sobre nosotros</a> </li>
             <li><a href="#">Productos</a></li>
-            <li><a href="#">Puntos de venta</a></li>
+            <li><a href="puntos-venta.html" class="focus">Puntos de venta</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
@@ -46,6 +50,8 @@
             <p>Encuentra tu tienda más cercana</p>
         </div>
     </section>
+
+<h3>Andújar</h3>
 
 <div class="puntos-venta">
 
@@ -146,6 +152,83 @@
             <p class="tlf"><img src="images/tlf.png">953 587 412</p>
         </div>
     </div>
+
+</div>
+
+<h3>Arjonilla</h3>
+
+<div class="puntos-venta">
+
+    <div class="tarjeta">
+        <div class="color"><img src="images/tienda.png"></div>
+
+        <div class="info">
+            <strong class="nombre">Colmado La Rubia</strong><br>
+            <strong>Dirección:</strong>
+            <p class="direccion">C. la Palma, 19, 23740</p>
+            <p class="poblacion">Andújar, Jaén</p>
+            <strong>Contacto:</strong>
+            <p class="tlf"><img src="images/tlf.png">636 547 129</p>
+            <p class="tlf"><img src="images/tlf.png">950 457 412</p>
+        </div>
+    </div>
+
+    <div class="tarjeta">
+        <div class="color"><img src="images/tienda.png"></div>
+
+        <div class="info">
+            <strong class="nombre">Plaza de Abastos</strong><br>
+            <strong>Dirección:</strong>
+            <p class="direccion">C. el Pino, 36, 23740</p>
+            <p class="poblacion">Andújar, Jaén</p>
+            <strong>Contacto:</strong>
+            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+        </div>
+    </div>
+
+        <div class="tarjeta">
+        <div class="color"><img src="images/tienda.png"></div>
+
+        <div class="info">
+            <strong class="nombre">Plaza de Abastos</strong><br>
+            <strong>Dirección:</strong>
+            <p class="direccion">C. el Pino, 36, 23740</p>
+            <p class="poblacion">Andújar, Jaén</p>
+            <strong>Contacto:</strong>
+            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+        </div>
+    </div>
+
+        <div class="tarjeta">
+        <div class="color"><img src="images/tienda.png"></div>
+
+        <div class="info">
+            <strong class="nombre">Plaza de Abastos</strong><br>
+            <strong>Dirección:</strong>
+            <p class="direccion">C. el Pino, 36, 23740</p>
+            <p class="poblacion">Andújar, Jaén</p>
+            <strong>Contacto:</strong>
+            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+        </div>
+    </div>
+
+        <div class="tarjeta">
+        <div class="color"><img src="images/tienda.png"></div>
+
+        <div class="info">
+            <strong class="nombre">Plaza de Abastos</strong><br>
+            <strong>Dirección:</strong>
+            <p class="direccion">C. el Pino, 36, 23740</p>
+            <p class="poblacion">Andújar, Jaén</p>
+            <strong>Contacto:</strong>
+            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+        </div>
+    </div>
+
 
 </div>
 
