avance web andupan

--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
 <section class="hcontacto">
     <div class="htelefono" href="tel:+34953510226">
         <img src="images/tlf.png">
-        <p><strong>Teléfono:</strong>+34 953 51 02 26</p>
+        <p><strong>Teléfono:</strong><a href="tel:+34 953 51 02 26">953 51 02 26</a></p>
     </div>
 
     <div class="hredes">
@@ -35,8 +35,8 @@
 
     <nav>
         <ul>
-            <li><a href="#">Sobre nosotros</a> </li>
-            <li><a href="nuestros-productos.html">Productos</a></li>
+            <li><a href="sobrenosotros.html">Sobre nosotros</a> </li>
+            <li><a href="productos.html">Productos</a></li>
             <li><a href="puntos-venta.html">Puntos de venta</a></li>
             <li><a href="contacto.html" id="focus" aria-disabled="true">Contacto</a></li>
         </ul>
@@ -118,7 +118,7 @@ Jaen</p>
     <div class="footer-content">
         
         <div class="footer-col">
-            <img src="images/EASRGSERG.png" class="footer-logo">
+            <img src="images/logofondooscuro.png" class="footer-logo">
             <p class="slogan">¡Endulzamos tus mejores momentos!</p>
             <p><i class="fas fa-map-marker-alt"></i> Calle 123, Ciudad, País</p>
             <p><i class="fas fa-phone"></i> +123 456 789</p>
@@ -131,16 +131,6 @@ Jaen</p>
             <h3>Horario de Atención</h3>
             <p>Lunes a Viernes: 9:00 AM - 7:00 PM</p>
             <p>Sábado y Domingo: 10:00 AM - 5:00 PM</p>
-        </div>
-
-        <div class="footer-col">
-            <h3>Enlaces</h3>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Promociones</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
         </div>
 
     </div>
