--- a/puntos-venta.html
+++ b/puntos-venta.html
@@ -18,7 +18,7 @@
 <section class="hcontacto">
     <div class="htelefono" href="tel:+34953510226">
         <img src="images/tlf.png">
-        <p><strong>Teléfono:</strong>+34 953 51 02 26</p>
+        <p><strong>Teléfono:</strong><a href="tel:+34 953 51 02 26">953 510 226</a></p>
     </div>
 
     <div class="hredes">
@@ -34,9 +34,9 @@
 
     <nav>
         <ul>
-            <li><a href="#">Sobre nosotros</a> </li>
-            <li><a href="#">Productos</a></li>
-            <li><a href="puntos-venta.html" class="focus">Puntos de venta</a></li>
+            <li><a href="sobrenosotros.html">Sobre nosotros</a> </li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="puntos-venta.html" id="focus">Puntos de venta</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
@@ -51,7 +51,7 @@
         </div>
     </section>
 
-<h3>Andújar</h3>
+<h2>Andújar</h2>
 
 <div class="puntos-venta">
 
@@ -66,20 +66,6 @@
             <strong>Contacto:</strong>
             <p class="tlf"><img src="images/tlf.png">636 547 129</p>
             <p class="tlf"><img src="images/tlf.png">950 457 412</p>
-        </div>
-    </div>
-
-    <div class="tarjeta">
-        <div class="color"><img src="images/tienda.png"></div>
-
-        <div class="info">
-            <strong class="nombre">Plaza de Abastos</strong><br>
-            <strong>Dirección:</strong>
-            <p class="direccion">C. el Pino, 36, 23740</p>
-            <p class="poblacion">Andújar, Jaén</p>
-            <strong>Contacto:</strong>
-            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
-            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
         </div>
     </div>
 
@@ -155,7 +141,7 @@
 
 </div>
 
-<h3>Arjonilla</h3>
+<h2>Arjonilla</h2>
 
 <div class="puntos-venta">
 
@@ -233,7 +219,7 @@
 </div>
 
     
-<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1I7JSFV5x4bud9gDTZ7JlfUYQA5_QYD4&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1I7JSFV5x4bud9gDTZ7JlfUYQA5_QYD4&ehbc=2E312F&noprof=1"></iframe>
 
 
 </main>
@@ -244,7 +230,7 @@
     <div class="footer-content">
         
         <div class="footer-col">
-            <img src="images/EASRGSERG.png" class="footer-logo">
+            <img src="images/logofondooscuro.png" class="footer-logo">
             <p class="slogan">¡Endulzamos tus mejores momentos!</p>
             <p><i class="fas fa-map-marker-alt"></i> Calle 123, Ciudad, País</p>
             <p><i class="fas fa-phone"></i> +123 456 789</p>
@@ -254,20 +240,11 @@
         </div>
 
         <div class="footer-col">
-            <h3>Horario de Atención</h3>
+            <h4>Horario de Atención</h4>
             <p>Lunes a Viernes: 9:00 AM - 7:00 PM</p>
             <p>Sábado y Domingo: 10:00 AM - 5:00 PM</p>
         </div>
 
-        <div class="footer-col">
-            <h3>Enlaces</h3>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Promociones</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </div>
 
     </div>
 
