--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos Andupan</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="styles/estilos.css">
     <link rel="stylesheet" href="styles/headerfooter.css">
     <link rel="shortcut icon" href="images/ico.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
 <section class="hcontacto">
     <div class="htelefono" href="tel:+34953510226">
         <img src="images/tlf.png">
-        <p><strong>Teléfono:</strong>+34 953 51 02 26</p>
+        <p><strong>Teléfono:</strong><a href="tel:+34 953 51 02 26">953 510 226</a></p>
     </div>
 
     <div class="hredes">
@@ -36,8 +36,8 @@
 
     <nav>
         <ul>
-            <li><a href="#">Sobre nosotros</a> </li>
-            <li><a href="nuestros-productos.html">Productos</a></li>
+            <li><a href="sobrenosotros.html">Sobre nosotros</a> </li>
+            <li><a href="productos.html">Productos</a></li>
             <li><a href="puntos-venta.html">Puntos de venta</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
@@ -50,13 +50,13 @@
             <p>Pasteles hechos a mano con ingredientes frescos y mucho cariño.
                 Descubre nuestros sabores únicos.</p>
 
-            <a href="#" class="banner-btn">Ver Productos</a>
+            <a href="productos.html" class="banner-btn">Ver Productos</a>
         </div>
     </section>
 
     <main>
 
-        <h2>• • Novedades • •</h2>
+        <h2>Novedades</h2>
 
         <div class="novedades">
 
@@ -101,11 +101,11 @@
                 <p>En <b>Productos Andupan</b>, nos dedicamos a endulzar tus momentos especiales con una amplia variedad
                     de productos de panadería y pastelería. Desde panes artesanales hasta deliciosos pasteles, cada uno
                     de nuestros productos está elaborado con ingredientes de la más alta calidad y con un toque de amor
-                    y dedicación.</p>
+                    y dedicación.</p><br>
                 <p>Nuestra misión es ofrecerte no solo productos deliciosos, sino también una experiencia única que te
                     haga sentir como en casa. Ya sea que estés buscando un pan fresco para el desayuno, un pastel para
                     una ocasión especial o simplemente un dulce capricho, en Productos Andupan tenemos algo para todos
-                    los gustos.</p>
+                    los gustos.</p><br>
                 <p>Visítanos y descubre por qué somos la elección favorita de nuestros clientes. ¡Endulzamos tus mejores
                     momentos!</p>
             </div>
@@ -126,7 +126,7 @@
     <div class="footer-content">
         
         <div class="footer-col">
-            <img src="images/EASRGSERG.png" class="footer-logo">
+            <img src="images/logofondooscuro.png" class="footer-logo">
             <p class="slogan">¡Endulzamos tus mejores momentos!</p>
             <p><i class="fas fa-map-marker-alt"></i> Calle 123, Ciudad, País</p>
             <p><i class="fas fa-phone"></i> +123 456 789</p>
@@ -141,15 +141,6 @@
             <p>Sábado y Domingo: 10:00 AM - 5:00 PM</p>
         </div>
 
-        <div class="footer-col">
-            <h3>Enlaces</h3>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Promociones</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </div>
 
     </div>
 
