--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
 
 <section class="hcontacto">
     <div class="htelefono" href="tel:+34953510226">
-        <img src="images/tlf.png">
-        <p><strong>Teléfono:</strong><a href="tel:+34 953 51 02 26">953 510 226</a></p>
+        <img src="images/tlf.png" alt="">
+        <p><strong>Teléfono:</strong><a aria-label="Llamar por teléfono" href="tel:+34 953 51 02 26">953 510 226</a></p>
     </div>
 
     <div class="hredes">
-        <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.facebook.com/p/Productos-Andupan-61559872355548/&ved=2ahUKEwirwa7hlKSRAxXMVKQEHbGiKnoQFnoECB0QAQ&usg=AOvVaw3aBFf4LinK79cw2uftf4Fe" title="Facebook"><img src="images/iconoafce.png"></a>
-        <a href="https://www.instagram.com/productosandupan/?hl=es" title="Instagram"><img src="images/iconoinsta.png"></a>
-        <a href="https://wa.me/15551234567" title="WhatApp"><img src="images/iconowhatsapp.png"></a>
-        <a href="mailto:info@productosandupan.com" title="Correo electrónico"><img src="images/iconocorreo.png"></a>
+        <a aria-label="Enlace Facebook" href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.facebook.com/p/Productos-Andupan-61559872355548/&ved=2ahUKEwirwa7hlKSRAxXMVKQEHbGiKnoQFnoECB0QAQ&usg=AOvVaw3aBFf4LinK79cw2uftf4Fe" title="Facebook"><img src="images/iconoafce.png"></a>
+        <a aria-label="Enlace Instagram" href="https://www.instagram.com/productosandupan/?hl=es" title="Instagram"><img src="images/iconoinsta.png"></a>
+        <a aria-label="Enlace WhatsApp" href="https://wa.me/15551234567" title="WhatApp"><img src="images/iconowhatsapp.png"></a>
+        <a aria-label="Enviar un correo electrónico" href="mailto:info@productosandupan.com" title="Correo electrónico"><img src="images/iconocorreo.png"></a>
     </div>
-</section>
+</section>  
 
 <header class="hheader">
     <a href="index.html"><img src="images/iconoprincipal.png"></a>
 
     <nav>
         <ul>
-            <li><a href="sobrenosotros.html">Sobre nosotros</a> </li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="puntos-venta.html">Puntos de venta</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a tabindex="7" href="sobrenosotros.html">Sobre nosotros</a> </li>
+            <li><a tabindex="8" href="productos.html">Productos</a></li>
+            <li><a tabindex="9" href="puntos-venta.html">Puntos de venta</a></li>
+            <li><a tabindex="10" href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
 </header>
