--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </div>
 
     <div class="hredes">
-        <a aria-label="Enlace Facebook" href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.facebook.com/p/Productos-Andupan-61559872355548/&ved=2ahUKEwirwa7hlKSRAxXMVKQEHbGiKnoQFnoECB0QAQ&usg=AOvVaw3aBFf4LinK79cw2uftf4Fe" title="Facebook"><img src="images/iconoafce.png"></a>
-        <a aria-label="Enlace Instagram" href="https://www.instagram.com/productosandupan/?hl=es" title="Instagram"><img src="images/iconoinsta.png"></a>
-        <a aria-label="Enlace WhatsApp" href="https://wa.me/15551234567" title="WhatApp"><img src="images/iconowhatsapp.png"></a>
-        <a aria-label="Enviar un correo electrónico" href="mailto:info@productosandupan.com" title="Correo electrónico"><img src="images/iconocorreo.png"></a>
+        <a aria-label="Facebook de Productos Andupan" href="https://www.facebook.com/profile.php?id=61559872355548"><img src="images/iconoafce.png" alt=""></a>
+        <a aria-label="Instagram de Productos Andupan" href="https://www.instagram.com/productosandupan/?hl=es"><img src="images/iconoinsta.png" alt=""></a>
+        <a aria-label="WhatsApp de Productos Andupan" href="https://wa.me/15551234567"><img src="images/iconowhatsapp.png" alt=""></a>
+        <a aria-label="Enviar correo electrónico de Productos Andupan" href="mailto:info@productosandupan.com"><img src="images/iconocorreo.png" alt=""></a>
     </div>
 </section>  
 
@@ -62,14 +62,14 @@
 
             <div class="novedad">
                 <div class="color"></div>
-                <img src="/images/ooreo.png">
+                <img src="/images/ooreo.png" alt="Tarta de oreo">
                 <p>Tarta de oreo</p>
             </div>
 
             <div class="novedad">
 
                 <div class="color1"></div>
-                <img src="/images/pista.png">
+                <img src="/images/pista.png" alt="Palmera de pistacho">
 
                 <p>Palmera de pistacho</p>
 
@@ -77,7 +77,7 @@
 
             <div class="novedad">
                 <div class="color"></div>
-                <img src="/images/pasteles.png">
+                <img src="/images/pasteles.png" alt="Tartitas variadas">
 
                 <p>Tartitas variadas</p>
 
@@ -85,7 +85,7 @@
 
             <div class="novedad">
                 <div class="color1"></div>
-                <img src="images/vienesa.png">
+                <img src="images/vienesa.png" alt="Tarta vienesa">
 
                 <p>Tarta vienesa</p>
 
@@ -111,7 +111,7 @@
             </div>
 
             <div class="foto1">
-                <img src="images/rwsertgwerth.png" class="foto">
+                <img src="images/rwsertgwerth.png" class="foto" alt="">
             </div>
 
         </div>
@@ -126,7 +126,7 @@
     <div class="footer-content">
         
         <div class="footer-col">
-            <img src="images/logofondooscuro.png" class="footer-logo">
+            <img src="images/logofondooscuro.png" class="footer-logo" alt="Productos Andupan">
             <p class="slogan">¡Endulzamos tus mejores momentos!</p>
             <p><i class="fas fa-map-marker-alt"></i> Calle 123, Ciudad, País</p>
             <p><i class="fas fa-phone"></i> +123 456 789</p>
