--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,17 +18,16 @@
 
 <section class="hcontacto">
     <div class="htelefono" href="tel:+34953510226">
-        <img src="images/tlf.png">
-        <p><strong>Teléfono:</strong><a href="tel:+34 953 51 02 26">953 51 02 26</a></p>
+        <a aria-label="Llamar por teléfono" href="tel:+34 953 51 02 26"><img src="images/tlf.png" alt=""><strong>Teléfono:</strong>953 510 226</a>
     </div>
 
     <div class="hredes">
-        <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.facebook.com/p/Productos-Andupan-61559872355548/&ved=2ahUKEwirwa7hlKSRAxXMVKQEHbGiKnoQFnoECB0QAQ&usg=AOvVaw3aBFf4LinK79cw2uftf4Fe" title="Facebook"><img src="images/iconoafce.png"></a>
-        <a href="https://www.instagram.com/productosandupan/?hl=es" title="Instagram"><img src="images/iconoinsta.png"></a>
-        <a href="https://wa.me/15551234567" title="WhatApp"><img src="images/iconowhatsapp.png"></a>
-        <a href="mailto:info@productosandupan.com" title="Correo electrónico"><img src="images/iconocorreo.png"></a>
+        <a aria-label="Facebook de Productos Andupan" href="https://www.facebook.com/profile.php?id=61559872355548"><img src="images/iconoafce.png" alt=""></a>
+        <a aria-label="Instagram de Productos Andupan" href="https://www.instagram.com/productosandupan/?hl=es"><img src="images/iconoinsta.png" alt=""></a>
+        <a aria-label="WhatsApp de Productos Andupan" href="https://wa.me/15551234567"><img src="images/iconowhatsapp.png" alt=""></a>
+        <a aria-label="Enviar correo electrónico de Productos Andupan" href="mailto:info@productosandupan.com"><img src="images/iconocorreo.png" alt=""></a>
     </div>
-</section>
+</section>  
 
 <header class="hheader">
     <a href="index.html"><img src="images/iconoprincipal.png"></a>
@@ -38,7 +37,7 @@
             <li><a href="sobrenosotros.html">Sobre nosotros</a> </li>
             <li><a href="productos.html">Productos</a></li>
             <li><a href="puntos-venta.html">Puntos de venta</a></li>
-            <li><a href="contacto.html" id="focus" aria-disabled="true">Contacto</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
 </header>
@@ -60,19 +59,19 @@
             <form action="#" method="POST" class="contacto-form">
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
-                    <input type="text" id="nombre" name="nombre" required>
+                    <input aria-required="true" type="text" id="nombre" name="nombre" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
+                    <input autocomplete="email" aria-required="true" type="email" id="email" name="email" required>
                 </div>
                 <div class="form-group">
                     <label for="asunto">Asunto</label>
-                    <input type="text" id="asunto" name="asunto">
+                    <input aria-required="true" type="text" id="asunto" name="asunto">
                 </div>
                 <div class="form-group">
                     <label for="mensaje">Mensaje</label>
-                    <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+                    <textarea aria-required="true" id="mensaje" name="mensaje" rows="5" required></textarea>
                 </div>
                 <button type="submit" class="btn-submit">Enviar Mensaje</button>
             </form>
@@ -103,7 +102,7 @@ Jaen</p>
             </div>
             
             <div class="mapa-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.3357916802315!2d-4.040685100067618!3d38.03926144392763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6c37ac5197d0f5%3A0xde578ed076b36afb!2sPRODUCTOS%20ANDUPAN%20S.L.!5e0!3m2!1ses!2ses!4v1765322712441!5m2!1ses!2ses" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe tabindex="-1" title="Ubicación de la panificadora Productos Andupan en Andújar"></iframe> src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.3357916802315!2d-4.040685100067618!3d38.03926144392763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6c37ac5197d0f5%3A0xde578ed076b36afb!2sPRODUCTOS%20ANDUPAN%20S.L.!5e0!3m2!1ses!2ses!4v1765322712441!5m2!1ses!2ses" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
         
