--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -19,8 +19,7 @@
 
 <section class="hcontacto">
     <div class="htelefono" href="tel:+34953510226">
-        <img src="images/tlf.png" alt="">
-        <p><strong>Teléfono:</strong><a aria-label="Llamar por teléfono" href="tel:+34 953 51 02 26">953 510 226</a></p>
+        <a aria-label="Llamar por teléfono" href="tel:+34 953 51 02 26"><img src="images/tlf.png" alt=""><strong>Teléfono:</strong>953 510 226</a>
     </div>
 
     <div class="hredes">
@@ -36,15 +35,19 @@
 
     <nav>
         <ul>
-            <li><a tabindex="7" href="sobrenosotros.html">Sobre nosotros</a> </li>
-            <li><a tabindex="8" href="productos.html">Productos</a></li>
-            <li><a tabindex="9" href="puntos-venta.html">Puntos de venta</a></li>
-            <li><a tabindex="10" href="contacto.html">Contacto</a></li>
+            <li><a href="sobrenosotros.html">Sobre nosotros</a> </li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="puntos-venta.html">Puntos de venta</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
 </header>
 
-    <section class="banner">
+
+
+    <main>
+
+            <section class="banner">
         <div class="banner-content">
             <h1>Delicias Artesanales</h1>
             <p>Pasteles hechos a mano con ingredientes frescos y mucho cariño.
@@ -54,11 +57,11 @@
         </div>
     </section>
 
-    <main>
 
-        <h2>Novedades</h2>
 
         <div class="novedades">
+
+        <h2>Novedades</h2>
 
             <div class="novedad">
                 <div class="color"></div>
