--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,26 +16,26 @@
 <body>
     
 
+
 <section class="hcontacto">
     <div class="htelefono" href="tel:+34953510226">
-        <img src="images/tlf.png">
-        <p><strong>Teléfono:</strong><a href="tel:+34953510226">953 510 226</a></p>
+        <a aria-label="Llamar por teléfono" href="tel:+34 953 51 02 26"><img src="images/tlf.png" alt=""><strong>Teléfono:</strong>953 510 226</a>
     </div>
 
     <div class="hredes">
-        <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.facebook.com/p/Productos-Andupan-61559872355548/&ved=2ahUKEwirwa7hlKSRAxXMVKQEHbGiKnoQFnoECB0QAQ&usg=AOvVaw3aBFf4LinK79cw2uftf4Fe" title="Facebook"><img src="images/iconoafce.png"></a>
-        <a href="https://www.instagram.com/productosandupan/?hl=es" title="Instagram"><img src="images/iconoinsta.png"></a>
-        <a href="https://wa.me/15551234567" title="WhatApp"><img src="images/iconowhatsapp.png"></a>
-        <a href="mailto:info@productosandupan.com" title="Correo electrónico"><img src="images/iconocorreo.png"></a>
+        <a aria-label="Facebook de Productos Andupan" href="https://www.facebook.com/profile.php?id=61559872355548"><img src="images/iconoafce.png" alt=""></a>
+        <a aria-label="Instagram de Productos Andupan" href="https://www.instagram.com/productosandupan/?hl=es"><img src="images/iconoinsta.png" alt=""></a>
+        <a aria-label="WhatsApp de Productos Andupan" href="https://wa.me/15551234567"><img src="images/iconowhatsapp.png" alt=""></a>
+        <a aria-label="Enviar correo electrónico de Productos Andupan" href="mailto:info@productosandupan.com"><img src="images/iconocorreo.png" alt=""></a>
     </div>
-</section>
+</section>  
 
 <header class="hheader">
     <a href="index.html"><img src="images/iconoprincipal.png"></a>
 
     <nav>
         <ul>
-            <li><a href="#" id="focus">Sobre nosotros</a> </li>
+            <li><a href="sobrenosotros.html">Sobre nosotros</a> </li>
             <li><a href="productos.html">Productos</a></li>
             <li><a href="puntos-venta.html">Puntos de venta</a></li>
             <li><a href="contacto.html">Contacto</a></li>
